--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,12 @@ header {
   background-color: rgba(255, 255, 255, 0.5);
   top: 0px;
   left: 0px;
+  right:0;
   position: absolute;
   display: block;
   font-size: 13px;
+  width:auto;
+  text-align:right;
 }
 
 header, .mapboxgl-ctrl.mapboxgl-ctrl-attrib {
@@ -40,7 +43,7 @@ header, .mapboxgl-ctrl.mapboxgl-ctrl-attrib {
 h1 {
   display: inline;
   margin: 0px;
-  font-size: 18px;
+  font-size: 23px !important;
 }
 
 a {
@@ -81,4 +84,12 @@ a {
   font-size: 10px;
   line-height: 14px;
   border-radius: 4px 0px 0px 0px;
+}
+
+.mapboxgl-ctrl-top-right {
+  top: 120px !important
+}
+
+.slider-selection {
+	background: #81bfde !important;
 }
