--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,12 @@ header {
   background-color: rgba(255, 255, 255, 0.5);
   top: 0px;
   left: 0px;
+  right:0;
   position: absolute;
   display: block;
   font-size: 13px;
+  width:0;
+  height:45px;
 }
 
 header, .mapboxgl-ctrl.mapboxgl-ctrl-attrib {
@@ -40,7 +43,7 @@ header, .mapboxgl-ctrl.mapboxgl-ctrl-attrib {
 h1 {
   display: inline;
   margin: 0px;
-  font-size: 18px;
+  font-size: 23px;
 }
 
 a {
