--- a/src/infopopup.css
+++ b/src/infopopup.css
@@ -3,7 +3,7 @@ table.item_info th {
 }
 
 .maplibregl-popup {
-  max-width: 350px !important; 
+  max-width: 450px !important; 
 }
 
 .maplibregl-popup h3 {
@@ -24,6 +24,11 @@ div.ext_link {
 
 div.wikidata_link {
 background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='156' width='156'%3E%3Ccircle r='70' stroke='%23FFF' cy='78' cx='78' stroke-width='12' fill='%23E6E6E6'/%3E%3Ccircle cy='78' cx='78' r='56' fill='%23FFF'/%3E%3Cpath d='M32 107h3V49h-3v58zm7 0h10V49H39v58zm13-58v58h10V49H52z' fill='%23900'/%3E%3Cpath d='M114 107h3V49h-3v58zm7-58v58h3V49h-3zm-55 58h3V49h-3v58zm7-58v58h3V49h-3z' fill='%23396'/%3E%3Cpath d='M80 107h10V49H80v58zm13 0h4V49h-4v58zm7-58v58h10V49h-10z' fill='%23069'/%3E%3C/svg%3E");
+}
+
+img.designicon {
+  max-height: 200px;
+  max-width: 140px;
 }
 
 div.wikipedia_link {
